--- a/Exercises/Exerciseset1/ExerciseSet1.Rmd
+++ b/Exercises/Exerciseset1/ExerciseSet1.Rmd
@@ -2,7 +2,9 @@
 ---
 title: "Exercise Set 1"
 author: "T. Evgeniou"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 
